2018-06-12
-fixed cutting at black points
-slows down process due to transcoding to enable proper cuts
-fixed specifying an index
-fixed bug where test function broke
-removed comments
-added changelog
